# blackrl

./: .gitignore  LICENSE  Makefile  PLOTTING_GUIDE.md  QUICKSTART.md  README.md  main.py  nohup.out  pyproject.toml
blackrl/: __init__.py  config.py  plots.py
blackrl/agents/: __init__.py
blackrl/algos/: __init__.py  bilevel_rl.py
blackrl/envs/: __init__.py  base.py  discrete_toy_env.py
blackrl/policies/: __init__.py  joint_policy.py
blackrl/q_functions/: __init__.py  base.py
blackrl/replay_buffer/: __init__.py  base.py  gamma_replay_buffer.py
configs/: cartpole.yaml
docs/: bilevel_rl.md  mkdocs.yml
docs/docs/: index.md
examples/: agent_example.py  cartpole_random.py  training_example.py
notebooks/: MaxEntLQR.ipynb  plot_notebook_DiscreteToy.ipynb  plot_notebook_GuidedCartPole.ipynb  plot_notebook_GuidedCartPole_Basline.ipynb  plot_notebook_GuidedCartPole_Basline_offpolicy.ipynb  plot_notebook_GuidedCartPole_STDDPG.ipynb  plot_notebook_LQR.ipynb
reports/Q-table/: env1  env1_1a  env4_1a  envPaper
scripts/: 3base_train.py  __init__.py  compute_true_q_values.py  example_usage.py  plot_learning_curves.py  runrun.py  train_bilevel.py
sh/: run.sh
src/: __init__.py  dataset.py  features.py  plots.py
src/agents/: __init__.py
src/algos/: __init__.py  bilevel_rl.py
src/blackrl/: __init__.py  agent.py  random_agent.py  training.py
src/envs/: __init__.py  base.py  discrete_toy_env.py
src/modeling/: predict.py  train.py
src/policies/: __init__.py  joint_policy.py
src/q_functions/: __init__.py  base.py
tests/: test_agents.py  test_basic.py
(+12 files in other folders)
