[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blackrl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cookiecutter-data-science>=2.3.0",
    "numpy>=2.3.4",
    "ruff>=0.14.4 ",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "torch>=2.0.0",
    "gymnasium>=0.29.0",
    "tqdm>=4.65.0",
    "typer>=0.9.0",
    "joblib>=1.3.0",
]

[tool.hatchling.build.targets.wheel]
packages = ["blackrl"]
